fix max width on mobile

--- a/modules/floating-buttons/assets/scss/floating-buttons/widgets/contact-buttons-var-7.scss
+++ b/modules/floating-buttons/assets/scss/floating-buttons/widgets/contact-buttons-var-7.scss
@@ -19,8 +19,9 @@
 		@media (max-width: $screen-mobile-max) {
 			width: 100%;
 
-			.e-contact-buttons__chat-button {
+			.e-contact-buttons__chat-button-container {
 				width: 100%;
+				max-width: 100%;
 			}
 		}
 	}
